# NewsFeed

./: .gitignore  README.md  WORKSPACE.bazel  bazel-NewsFeed
.github/workflows/: build-ios-app.yml
NewsFeed/: BUILD.bazel  ContentView.swift  Info.plist  NewsFeedApp.swift
NewsFeed.xcodeproj/: project.pbxproj
NewsFeed/Helpers/Comuns/: Events.swift
NewsFeed/Helpers/DependencyInjection/: DependencyInjection.swift
NewsFeed/Scenes/Feed/: FeedFactory.swift  FeedModel.swift  FeedService.swift  FeedView.swift  FeedViewModel.swift  NewsCard.swift
NewsFeed/Scenes/NewsDetail/: NewsDetail.swift  NewsFactory.swift  NewsViewModel.swift
NewsFeed/Workers/AnalyticsEvents/: AnalyticsEvents.swift
NewsFeed/Workers/UrlOpen/: URLOpener.swift
NewsFeedTests/: BUILD.bazel  NewsFeedTests.swift
NewsFeedTests/Helpers/: XCTAssertHelper.swift
NewsFeedTests/Scenes/Feed/: FeedViewModelTests.swift
NewsFeedTests/Scenes/NewsDetail/: NewsDetailViewModelTests.swift
