load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj"
)

xcodeproj(
    name = "xcodeproj",
    project_name = "NewsFeed",
    top_level_targets = [
        top_level_target(
            label = "//NewsFeed:NewsFeed", 
            target_environments = ["simulator"]
        ),
        top_level_target(
            label = "//NewsFeedTests:NewsFeedTests", 
            target_environments = ["simulator"]
        )
    ],
)

swift_library(
    name = "SwiftLibrary",
    srcs = glob([
        "**/*.swift",
    ]),
    data = glob([
        "*.xcassets/**/*",
        "*.lproj/**/*",
    ]),
    module_name = "NewsFeed",
    visibility = ["//visibility:public"],
)

ios_application(
    name = "NewsFeed",
    bundle_id = "com.franklinmelo.NewsFeed",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = [":Info.plist"],
    minimum_os_version = "17.4",
    visibility = ["//visibility:public"],
    deps = [":SwiftLibrary"],
)